fix: UI Styling
 - Layout had additional `;` in code
 - scrollbars for Editable Table

--- a/src/index.css
+++ b/src/index.css
@@ -18,3 +18,7 @@
     padding: 0.3em;
 }
 
+#root {
+    margin: 0;
+    padding: 0;
+}
